[package]
name = "hyperscale-engine"
version.workspace = true
edition.workspace = true
description = "Radix Engine integration"

[dependencies]
# Internal crates
hyperscale-core = { workspace = true }
hyperscale-types = { workspace = true }

# External dependencies
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

# Radix dependencies (same versions as parent crates)
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }
radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }
radix-substate-store-impls = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }

[dev-dependencies]
