[package]
name = "hyperscale-production"
version.workspace = true
edition.workspace = true
description = "Production runner with async I/O"

[dependencies]
hyperscale-core.workspace = true
hyperscale-bft.workspace = true
hyperscale-engine.workspace = true
hyperscale-node.workspace = true
hyperscale-types.workspace = true
hyperscale-messages.workspace = true

# RocksDB for production persistence
rocksdb = "0.24"

# Networking - libp2p with QUIC transport
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "request-response", "quic", "tokio", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
sbor.workspace = true

# Async runtime
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rayon.workspace = true
parking_lot = "0.12"

# Core pinning support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
